--- a/package.json
+++ b/package.json
@@ -1,17 +1,10 @@
 {
-  "name": "vite-boot",
+  "name": "cherry",
   "version": "0.0.1",
   "private": true,
   "packageManager": "pnpm@8.6.2",
-  "description": "Vite starter template with UnoCSS",
-  "keywords": [
-    "viteBoot",
-    "vite-boot",
-    "vite",
-    "unocss",
-    "fast",
-    "boot"
-  ],
+  "description": "cherry front end",
+  "keywords": [],
   "main": "src/main.ts",
   "scripts": {
     "dev": "vite",
@@ -23,7 +16,7 @@
     "test": "vitest",
     "test:unit": "vitest",
     "test:coverage": "vitest run --coverage",
-    "prepare": "husky install",
+    "prepare": "pnpm dlx typesync && pnpm dlx husky install",
     "preinstall": "npx only-allow pnpm"
   },
   "dependencies": {
@@ -47,6 +40,9 @@
     "@iconify-json/tabler": "^1.1.79",
     "@intlify/unplugin-vue-i18n": "^0.11.0",
     "@kirklin/eslint-config": "^0.4.0",
+    "@types/eslint": "^8.44.1",
+    "@types/jsdom": "^21.1.1",
+    "@types/lint-staged": "^13.2.0",
     "@types/node": "^20.3.1",
     "@types/nprogress": "^0.2.0",
     "@vitejs/plugin-vue": "^4.2.3",
